--- a/contact.html
+++ b/contact.html
@@ -34,14 +34,14 @@
       <form class="nestedgrid2" autocomplete="off" action="https://formspree.io/f/xayzjnyw" method="POST">
         <div class="div1">
       Name*<br> <input type="text" size="30" name="fullname" placeholder="Jane Doe" autofocus required spellcheck="false" autocomplete="off"><br>
-      Email*<br> <input type="email" size="30"  required spellcheck="false" autocomplete="off"><br>
-      Phone*<br><input type="tel" size="30" placeholder="(xxx)xxx-xxxx"  required spellcheck="false" autocomplete="off"><br>
-      Personal Website<br> <input type="text" size="30"  spellcheck="false" autocomplete="off"><br>
+      Email*<br> <input type="email" size="30" name="email"  required spellcheck="false" autocomplete="off"><br>
+      Phone*<br><input type="tel" size="30" name="phonenumber" placeholder="(xxx)xxx-xxxx"  required spellcheck="false" autocomplete="off"><br>
+      Personal Website<br> <input type="text" size="30" name="website" spellcheck="false" autocomplete="off"><br>
          </div>
          <div class="div2">
-           Current High School<br> <input type="text" size="30"  spellcheck="false" autocomplete="off"><br>
-           Expected date of entry<br> <input type="date"  spellcheck="false" autocomplete="off"><br>
-           Number of days/weeks desired<br> <input type="number" spellcheck="false"><br>
+           Current High School<br> <input type="text" size="30" name="highschool" spellcheck="false" autocomplete="off"><br>
+           Expected date of entry<br> <input type="date" name="date" spellcheck="false" autocomplete="off"><br>
+           Number of days/weeks desired<br> <input type="number" name="days/weeks" spellcheck="false"><br>
            <input type ="submit" value="Help Me Book Boost My Scores!" class="button">
          </div>
        </form>
